[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autobenches = false
categories = ["value-formatting", "encoding", "no-std"]
description = "Shared utilities for lexical creates."
edition = "2021"
keywords = ["no_std"]
license = "MIT/Apache-2.0"
name = "lexical-util"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-lexical"
version = "1.0.7"
rust-version = "1.60.0"
exclude = [
    "assets/*",
    "docs/*",
    "etc/*",
    "cargo-timing*.html"
]

[dependencies]
float16 = { version = "0.1.0", optional = true }

# FEATURES
# --------
# In order to improve compile times, we have separate support
# for each numeric conversion. Since these features are additive,
# if more features are added, separate crates can add support
# for more features without requiring re-compilation of lexical.

[features]
default = ["std"]
# Use the standard library.
std = []
# Add support for numerical conversions with power-of-two strings.
power-of-two = []
# Add support for numerical conversions with non-decimal strings.
radix = ["power-of-two"]
# Add support for parsing custom numerical formats.
format = []
# Add support for writing integers.
write-integers = []
# Add support for writing floats.
write-floats = []
# Add support for parsing integers.
parse-integers = []
# Add support for parsing floats.
parse-floats = []
# Reduce code size at the cost of performance.
compact = []
# Add support for the `f16` and `b16` half-point floating point numbers.
f16 = ["parse-floats", "write-floats", "float16"]

# Internal only features.
# Enable the lint checks.
lint = []

# UNSUPPORTED
# -----------
# Currently unsupported features.
# Enable support for 128-bit floats. Unsupported and unlikely to ever be.
#   https://github.com/Alexhuszagh/rust-lexical/issues/46
# Enable support for 16-bit floats.
# Enable support for 128-bit floats.
f128 = ["parse-floats", "write-floats"]

[package.metadata.docs.rs]
features = ["radix", "format", "write-integers", "write-floats", "parse-integers", "parse-floats", "f16"]
rustdoc-args = ["--cfg", "docsrs"]
