[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autobenches = false
categories = ["parsing", "encoding", "no-std", "value-formatting"]
description = "Lexical, to- and from-string conversion routines."
edition = "2021"
keywords = ["parsing", "lexical", "encoding", "no_std"]
license = "MIT/Apache-2.0"
name = "lexical"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-lexical"
version = "7.0.4"
rust-version = "1.63.0"
exclude = [
    "assets/*",
    "docs/*",
    "etc/*",
    "cargo-timing*.html"
]

[dependencies.lexical-core]
version = "1.0.5"
default-features = false
path = "../lexical-core"

[features]
# Need to enable all for backwards compatibility.
default = ["std", "write-integers", "write-floats", "parse-integers", "parse-floats"]
# Use the standard library.
std = ["lexical-core/std"]
# Add support for writing integers.
write-integers = ["lexical-core/write-integers", "write", "integers"]
# Add support for writing floats.
write-floats = ["lexical-core/write-floats", "write", "floats"]
# Add support for parsing integers.
parse-integers = ["lexical-core/parse-integers", "parse", "integers"]
# Add support for parsing floats.
parse-floats = ["lexical-core/parse-floats", "parse", "floats"]
# Add support for parsing power-of-two float strings.
power-of-two = ["lexical-core/power-of-two"]
# Add support for parsing non-decimal float strings.
radix = ["lexical-core/radix"]
# Add support for parsing custom numerical formats.
format = ["lexical-core/format"]
# Reduce code size at the cost of performance.
compact = ["lexical-core/compact"]
# Enable support for 16-bit floats.
f16 = ["lexical-core/f16"]

# INTERNAL ONLY
# -------------
# Internal only features. These are not meant to be used directly.
# Enable the lint checks.
lint = ["lexical-core/lint"]
# Add support for writing numbers.
# Library users should use `write-integers` and `write-floats` instead.
write = ["lexical-core/write"]
# Add support for parsing numbers.
# Library users should use `parse-integers` and `parse-floats` instead.
parse = ["lexical-core/parse"]
# Add support for conversions to or from integers.
# Library users should use `write-integers` and `parse-integers` instead.
integers = ["lexical-core/integers"]
# Add support for conversions to or from floats.
# Library users should use `write-floats` and `parse-floats` instead.
floats = ["lexical-core/floats"]

# UNSUPPORTED
# -----------
# Currently unsupported features.
# Enable support for 128-bit floats. Unsupported and unlikely to ever be.
#   https://github.com/Alexhuszagh/rust-lexical/issues/46
f128 = ["lexical-core/f128"]

[package.metadata.docs.rs]
features = ["radix", "format", "write-integers", "write-floats", "parse-integers", "parse-floats"]
