[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autobenches = false
categories = ["parsing", "encoding", "no-std", "value-formatting"]
description = "Lexical, to- and from-string conversion routines."
edition = "2021"
keywords = ["parsing", "lexical", "encoding", "no_std"]
license = "MIT/Apache-2.0"
name = "lexical"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-lexical"
version = "7.0.5"
rust-version = "1.60.0"
exclude = [
    "assets/*",
    "docs/*",
    "etc/*",
    "cargo-timing*.html"
]

[dependencies.lexical-core]
version = "1.0.6"
default-features = false
path = "../lexical-core"

[features]
# Need to enable all for backwards compatibility.
default = ["std", "write-integers", "write-floats", "parse-integers", "parse-floats"]
# Use the standard library.
std = ["lexical-core/std"]
# Add support for writing integers.
write-integers = ["lexical-core/write-integers"]
# Add support for writing floats.
write-floats = ["lexical-core/write-floats"]
# Add support for parsing integers.
parse-integers = ["lexical-core/parse-integers"]
# Add support for parsing floats.
parse-floats = ["lexical-core/parse-floats"]
# Add support for parsing power-of-two float strings.
power-of-two = ["lexical-core/power-of-two"]
# Add support for parsing non-decimal float strings.
radix = ["lexical-core/radix"]
# Add support for parsing custom numerical formats.
format = ["lexical-core/format"]
# Reduce code size at the cost of performance.
compact = ["lexical-core/compact"]
# Enable support for 16-bit floats.
f16 = ["lexical-core/f16"]

# INTERNAL ONLY
# -------------
# Internal only features. These are not meant to be used directly.
# Enable the lint checks.
lint = ["lexical-core/lint"]

# UNSUPPORTED
# -----------
# Currently unsupported features.
# Enable support for 128-bit floats. Unsupported and unlikely to ever be.
#   https://github.com/Alexhuszagh/rust-lexical/issues/46
f128 = ["lexical-core/f128"]

# DEPRECATED
# ----------
# These were never supported, however, they exist in case existing code
# uses them. They should not be used under any circumstances and should
# be removed.
parse = ["parse-integers", "parse-floats"]
write = ["write-integers", "write-floats"]
integers = ["parse-integers", "write-integers"]
floats = ["parse-floats", "write-floats"]

[package.metadata.docs.rs]
features = ["radix", "format", "write-integers", "write-floats", "parse-integers", "parse-floats", "f16"]
rustdoc-args = ["--cfg", "docsrs"]
