[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autobenches = false
categories = ["parsing", "encoding", "no-std", "value-formatting"]
description = "Lexical, to- and from-string conversion routines."
edition = "2018"
keywords = ["parsing", "lexical", "encoding", "no_std"]
license = "MIT/Apache-2.0"
name = "lexical_core"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-lexical-experimental"
version = "0.1.0"

[dependencies]
lexical_parse_integer = { version = "0.1", optional = true, path = "../lexical_parse_integer" }
lexical_parse_float = { version = "0.1", optional = true, path = "../lexical_parse_float" }
lexical_write_integer = { version = "0.1", optional = true, path = "../lexical_write_integer" }
lexical_write_float = { version = "0.1", optional = true, path = "../lexical_write_float" }

[features]
default = ["std"]
# Use the standard library.
std = []
