[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autobenches = false
categories = ["parsing", "encoding", "no-std", "value-formatting"]
description = "Lexical, to- and from-string conversion routines."
edition = "2018"
keywords = ["parsing", "lexical", "encoding", "no_std"]
license = "MIT/Apache-2.0"
name = "lexical_core"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-lexical-experimental"
version = "0.1.0"

[dependencies.lexical_parse_integer]
version = "0.1"
optional = true
path = "../lexical_parse_integer"

[dependencies.lexical_parse_float]
version = "0.1"
optional = true
path = "../lexical_parse_float"

[dependencies.lexical_write_integer]
version = "0.1"
optional = true
path = "../lexical_write_integer"

[dependencies.lexical_write_float]
version = "0.1"
optional = true
path = "../lexical_write_float"

[features]
default = ["std"]
# Use the standard library.
std = []
# Add support for writing integers.
write_integers = ["lexical_write_integer"]
# Add support for writing floats.
write_floats = ["lexical_write_float"]
# Add support for parsing integers.
parse_integers = ["lexical_parse_integer"]
# Add support for parsing floats.
parse_floats = ["lexical_parse_float"]

# Internal only features.
# Enable the lint checks.
lint = [
    "lexical_write_integer/lint",
    "lexical_write_float/lint",
    "lexical_parse_integer/lint",
    "lexical_parse_float/lint"
]
