[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autobenches = false
categories = ["parsing", "no-std"]
description = "Efficient parsing of floats from strings."
edition = "2018"
keywords = ["parsing", "lexical", "no_std"]
license = "MIT/Apache-2.0"
name = "lexical_parse_float"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-lexical-experimental"
version = "0.1.0"

[dependencies.lexical_util]
version = "0.1"
path = "../lexical_util"
features = ["parse_floats"]

[features]
default = ["std"]
# Use the standard library.
std = []
# Add support for parsing power-of-two float strings.
power_of_two = ["lexical_util/power_of_two"]
# Add support for parsing non-decimal float strings.
radix = ["lexical_util/radix", "power_of_two"]

# Internal only features.
# Enable the lint checks.
lint = []
