[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autobenches = false
categories = ["value-formatting", "encoding", "no-std"]
description = "Shared utilities for lexical creates."
edition = "2018"
keywords = ["no_std"]
license = "MIT/Apache-2.0"
name = "lexical_util"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-lexical-experimental"
version = "0.1.0"

[dependencies]
cfg-if = "1.0"
libm = "0.2.1"
static_assertions = "1"

[dev-dependencies]
quickcheck = "1.0.3"
proptest = "0.10.1"

[features]
default = ["std"]
# Use the standard library.
std = []
# Add support for writing power-of-two integer strings.
power_of_two = []
# Add support for writing non-decimal integer strings.
radix = ["power_of_two"]

# Internal only features.
# Enable the lint checks.
lint = []
