[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autobenches = false
categories = ["value-formatting", "encoding", "no-std"]
description = "Efficient formatting of floats to strings."
edition = "2018"
keywords = ["encoding", "lexical", "no_std"]
license = "MIT/Apache-2.0"
name = "lexical_write_float"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-lexical-experimental"
version = "0.1.0"

[dependencies.lexical_util]
version = "0.1"
path = "../lexical_util"
features = ["write_floats"]

[features]
default = ["std"]
# Use the standard library.
std = []

# Internal only features.
# Enable the lint checks.
lint = []
