[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autobenches = false
categories = ["value-formatting", "encoding", "no-std"]
description = "Efficient formatting of integers to strings."
edition = "2018"
keywords = ["encoding", "lexical", "no_std"]
license = "MIT/Apache-2.0"
name = "lexical_write_integer"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-lexical-experimental"
version = "0.1.0"

[dependencies]
lexical_util = { version = "0.1", optional = true, path = "../lexical_util" }

[features]
default = ["std"]
# Use the standard library.
std = []
