[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autobenches = false
categories = ["value-formatting", "encoding", "no-std"]
description = "Efficient formatting of integers to strings."
edition = "2018"
keywords = ["encoding", "lexical", "no_std"]
license = "MIT/Apache-2.0"
name = "lexical_write_integer"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-lexical-experimental"
version = "0.1.0"

[dependencies]
lexical_util = { version = "0.1", path = "../lexical_util" }
static_assertions = "1"

[dev-dependencies]
quickcheck = "1.0.3"
proptest = "0.10.1"

[features]
default = ["std"]
# Use the standard library.
std = ["lexical_util/std"]
# Add support for writing power-of-two integer strings.
power_of_two = ["lexical_util/power_of_two"]
# Add support for writing non-decimal integer strings.
radix = ["lexical_util/radix", "power_of_two"]

# Internal only features.
# Enable the lint checks.
lint = []
