[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
edition = "2021"
keywords = ["no_std"]
license = "MIT/Apache-2.0"
name = "lexical-parse-float-extras"
repository = "https://github.com/Alexhuszagh/rust-lexical"
version = "0.0.1-alpha"
rust-version = "1.65.0"
publish = false

[dependencies.lexical-util]
path = "../../lexical-util"
default-features = false

[dependencies.lexical-parse-float]
path = "../../lexical-parse-float"
default-features = false

[dev-dependencies]
# FIXME: Replace back to "1.0.4" once the PR is merged.
#  There's an issue in quickcheck due to an infinitely repeating shrinker.
#  Issue:   https://github.com/BurntSushi/quickcheck/issues/295
#  Fix:     https://github.com/BurntSushi/quickcheck/pull/296
quickcheck = { git = "https://github.com/Alexhuszagh/quickcheck/", branch = "i32min-shrink-bound-legacy" }
# FIXME: Support 1.7.0+ when we only support Rustc 1.66.0+.
proptest = ">=1.5.0, <1.7.0"

[features]
default = ["std"]
std = ["lexical-util/std", "lexical-parse-float/std"]
power-of-two = ["lexical-util/power-of-two", "lexical-parse-float/power-of-two"]
radix = ["lexical-util/radix", "power-of-two", "lexical-parse-float/radix"]
format = ["lexical-util/format", "lexical-parse-float/format"]
compact = ["lexical-util/compact", "lexical-parse-float/compact"]
f16 = ["lexical-util/f16", "lexical-parse-float/f16"]
lint = ["lexical-util/lint", "lexical-parse-float/lint"]
