[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
edition = "2021"
keywords = ["no_std"]
license = "MIT/Apache-2.0"
name = "lexical-write-integer-extras"
repository = "https://github.com/Alexhuszagh/rust-lexical"
version = "0.0.1-alpha"
rust-version = "1.65.0"
publish = false

[dependencies.lexical-write-integer]
path = "../../lexical-write-integer"
default-features = false

[dependencies.lexical-util]
path = "../../lexical-util"
default-features = false

[dev-dependencies]
# FIXME: Replace back to "1.0.4" once the PR is merged.
#  There's an issue in quickcheck due to an infinitely repeating shrinker.
#  Issue:   https://github.com/BurntSushi/quickcheck/issues/295
#  Fix:     https://github.com/BurntSushi/quickcheck/pull/296
quickcheck = { git = "https://github.com/Alexhuszagh/quickcheck/", branch = "i32min-shrink-bound-legacy" }
proptest = ">=1.5.0"
rustversion = ">=1.0.18"

[features]
default = ["std"]
std = ["lexical-write-integer/std", "lexical-util/std"]
power-of-two = ["lexical-write-integer/power-of-two", "lexical-util/power-of-two"]
radix = ["lexical-write-integer/radix", "power-of-two", "lexical-util/radix"]
format = ["lexical-write-integer/format", "lexical-util/format"]
compact = ["lexical-write-integer/compact", "lexical-util/compact"]
lint = ["lexical-write-integer/lint", "lexical-util/lint"]
